# aqualang-v2

./: CMakeLists.txt  Makefile  README.md  app.py
docs/: runtime-api.md
examples/: concurrent_sum.cpp  fibers_channels.cpp  hello.aqua  hello_world.aqua  hello_world.cpp
src/: main.cpp
src/lexer/: lexer.cpp  lexer.hpp  lexer.py  token.cpp  token.hpp
src/lexer/tests/: lexer_tests.cpp
src/runtime/: runtime.cpp  runtime.hpp
src/utils/: error.hpp
tests/: test_runtime.cpp
